--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
       src="https://kit.fontawesome.com/764baddac2.js"
       crossorigin="anonymous"></script>
 
+    <!-- tailwind cdn for development   -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <title>John Lai's Portfolio</title>
   </head>
   <body>
